Added copilote's changes